[metadata]
name = applib
version = attr: applib.__version__
author = killbus
author_email = killbus@users.noreply.github.com
description = applib is a set of cross-platform application utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/killbus/python-applib
project_urls =
    Source = https://github.com/killbus/python-applib
    Bug Tracker = https://github.com/killbus/python-applib/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 4 - Beta
keywords = applib utilities
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7.*
install_requires =
    requests
    colorlog
    coloredlogs
    loguru
    typing_extensions
[options.packages.find]
where = .
exclude =
    tests
